Weaken spec to allow impl based decision for null elements